--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body{
     border-radius: 30px;
 }
 
-.wrapper video{
+.wrapper iframe{
     width: 100%;
     height: 100%;
     border-radius: 30px;
